# MLIR-Tutorial

./: CMakeLists.txt  toyc.cpp
include/toy/: CMakeLists.txt  Passes.h  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
include/toy/dialect/: CMakeLists.txt  ToyDialect.h  ToyOps.h  ToyOps.td
include/toy/dialect/interface/: ToyInlinerInterface.h
include/toy/interface/: CMakeLists.txt
include/toy/interface/inferShape/: CMakeLists.txt  ShapeInferenceInterface.h
include/toy/interface/inline/: InlinerInterface.h
include/toy/parser/: AST.h  Parser.h
src/: MLIRGen.cpp  ToyDialect.cpp  ToyOps.cpp
src/dialect/: ToyDialect.cpp  ToyOps.cpp
src/dialect/interface/: ToyInlinerInterface.cpp
src/parser/: AST.cpp
src/pass/CanonicalizerPass/: RegisterPattern.cpp  ReshapeOptPattern.td
src/pass/InlinerPass/: InlineOpImpl.cpp  ToyInlinerImpl.cpp
src/pass/LowerToAffinePass/: LowerToAffinePass.cpp
src/pass/ShapeInferencePass/: ShapeInferenceOpImpl.cpp  ShapeInferencePass.cpp
src/pass/combine/: SimplifyTransposePattern.cpp
tblgen/combine/: ToyCombine.inc
tblgen/ops/: .Ops.cpp
